fixed spacing when empty

--- a/src/styles/displayCV.css
+++ b/src/styles/displayCV.css
@@ -6,6 +6,7 @@
     font-family: 'Poppins';
     font-size: small;
     width: 100%;
+    min-height: 100%;
     /* overflow-wrap:normal; */
 }
 
@@ -95,6 +96,7 @@ hr {
     z-index: -1;
     content: '';
     height: 100%;
+    min-height: 50px;
     top: 0;
     left: 0;
     width: 80%;
